crates/murphy-plugin-macros/tests/ui/fail_node_pattern_opts_without_param.stderr
error: node_pattern!: `opts:` was given but the pattern contains no `%name` runtime parameter — remove the `opts:` clause
 --> tests/ui/fail_node_pattern_opts_without_param.rs:8:37
  |
8 | murphy_plugin_macros::node_pattern!(m, "(send _ :foo)", opts: MyOpts);
  |                                     ^
